# developer-platform

./: .gitignore  .lintstagedrc.js  .prettierignore  CLAUDE.md  README.md  package-lock.json  package.json  test-file.ts  turbo.json
.github/workflows/: deploy-cloud-run.yml
apps/api/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  package.json
apps/api/src/: app.module.ts  main.ts  test-hook.ts
apps/api/src/airdrop/: airdrop.controller.ts  (+2 more)
apps/cli/: Cargo.toml  README.md
apps/cli/src/: cli.rs  error.rs  lib.rs  main.rs
apps/cli/src/auth/: credentials.rs  device_flow.rs  mod.rs
apps/cli/src/client/: api.rs  mod.rs
apps/cli/src/commands/: airdrop.rs  apikey.rs  auth.rs  config.rs  deploy.rs  mod.rs  rpc.rs
apps/cli/src/config/: manager.rs  mod.rs
apps/web/: .env.example  COMPONENTS.md  package.json  tailwind.config.ts.backup
apps/web/app/: globals.css  layout.tsx  page.tsx  test-hook.tsx
apps/web/lib/: auth.ts
apps/web/types/: next-auth.d.ts
backend/: .env  .env.example  .env.example.backup  .env.local  README.md  cli-auth-example.js  eslint.config.mjs  package-lock.json  package.json
backend/src/: app.controller.ts  app.module.ts  main.ts
backend/src/airdrop/: airdrop.controller.ts  airdrop.dto.ts  airdrop.service.ts
backend/src/auth/: auth.module.ts  auth.service.ts
backend/src/cli-auth/: cli-auth.controller.ts
backend/src/storage/: storage.module.ts  storage.service.ts
backend/src/users/: users.service.ts
programs/: Anchor.toml
programs/programs/program-deployer/: Cargo.toml
programs/tests/: program-deployer.ts
(+125 files in other folders)
